Fix submenu overflow

--- a/less/theme.less
+++ b/less/theme.less
@@ -56,6 +56,10 @@ h1, h2, h3, h4, h5, h6,
     .body {
       overflow-y: overlay;
     }
+
+    .menu-dropright {
+      overflow-y: overlay;
+    }
   }
 
   header,
